[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "h264tt"
version = "0.1.0"
description = "Teaching tool to visualize low-level H.264 macroblock parameters"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "av>=12.0",
    "matplotlib>=3.8",
    "numpy>=1.26",
    "opencv-python-headless>=4.10",
    "PyQt5==5.15.11",
    "pyqt5-qt5==5.15.2",
]

[project.scripts]
H264TT-cli = "h264tt.cli:main"
H264TT-diagnose = "h264tt.diagnose:main"

[project.gui-scripts]
H264TT = "h264tt.gui.main:main"

[tool.setuptools.packages.find]
include = ["h264tt*"]

[tool.uv]
package = true
